# Calendar-Agent

./: -agent files and add new updates  .gitignore  Procfile  README.md  erstiwarOneDrive - The University of MelbourneDesktopCalendar Agent && git status
chatbot-main/: .gitignore  main.py  pyproject.toml
chatbot-main/database/: run_sql.py
chatbot-main/database/DDL/: create_tables.sql
chatbot-main/services/: service.py
chatbot-main/util/: formats.py  validators.py
events-agent/: .env.example  README.md  SETUP_GUIDE.md  auth_success.html  calendar_agent_bot.py  debug_startup.py  pyproject.toml  quick_test.py  railway.toml  render.yaml  run_bot.py  start_bot.py  test_calendar_agent.py  test_google_calendar.py
events-agent-update/: .env.template  README.md  events_agent.db  pyproject.toml  requirements.txt  simple_discord_bot.py  simple_test.py  test_calendar_agent.py
events-agent-update/src/events_agent/: main.py
events-agent-update/src/events_agent/infra/: settings.py
events-agent/alembic/: env.py
events-agent/alembic/versions/: 4e28fbd68bba_add_event_templates.py
events-agent/events_agent/app/: http.py  oauth.py
events-agent/events_agent/bot/: discord_bot.py
events-agent/events_agent/infra/: settings.py
events-agent/src/events_agent/: main.py
events-agent/src/events_agent/app/: oauth.py
events-agent/src/events_agent/bot/: discord_bot.py
events-agent/src/events_agent/domain/: models.py
events-agent/src/events_agent/infra/: crypto.py  date_parsing.py  scheduler.py  settings.py
